# end_of_degree_project

./: .gitignore  README.md  corrupted_images  fastsam.py  food100k.py  model_shootout.db  pyproject.toml  readme.md  requirements.txt  sequential_fine_tuning.db  sequential_fine_tuning.ipynb  shit  test_corruption.py  test_dataset.py  test_db.py  test_db2.py  test_db3.py  test_db4.py  test_db5.py  test_db6.py  test_df.py  test_len.py  test_mae.py  test_model.py  test_objective.py  test_optuna.db  test_split.py  test_standardize.py  test_studies.py  test_train.py  test_train2.py  test_train3.py  test_untrained.py  yolo.py
.ipynb_checkpoints/: model_shootout-checkpoint.ipynb
code/: fastsam.py  food100k.py
data/studies/: model_shootout.db  sequential_fine_tuning.db
docs/: TFG.md  TFG_Title.docx  mdtopdf.sh  mermaid-filter.err  mermaid_platemate  old.md  pandoc.sh  refs.bib  render_md.sh
src/: constants.py  dataset.py  helpers.py  list_models.py  main.py  models.py
src/dataset/: builder.py
src/datasets/: mmfood100k.py
src/food101.py/: food101.py
src/helpers/: files.py  images.py  indexing.py  misc.py  ml.py  models.py
src/mmfood100k/: builder.py  dataset.py  mmfood100k_builder.py  mmfood100k_dataset.py  mmfood100k_test.py  test.py
src/models/: cnn_regressor.py  efficientnet.py  efficientnetb0.py  fastsam.py  mobilenetv3.py  multihead_cnn.py  shufflenetv2.py  vgg.py  vit.py  yolo.py
src/scripts/: bayesian_optimization.py  efficientnet_fine_tuning.py  feature_extraction_experiment.py  grid_shootout_plots.py  load_data.py  mend_trials.py  model_shootout.py  platemate_agent.py  plot_dataset_sample.py  plot_food_distribution.py  plot_losses.py  pytorch_tutorial.py  sequential_fine_tuning.py  train_crossval.py  train_efficientnet_b0.py  train_efficientnetb0.py  train_mobilenet_v3.py  train_mobilenetv3.py  train_model.py  train_shufflenet_v2.py  train_swin.py  train_vgg.py  validate_platemate.py  validate_swin.py  view_studies.py  view_study_trial.py
src/studies/: model_shootout.ipynb  model_shootout.py  sequential_fine_tuning.ipynb  sequential_fine_tuning.py
src/tests/datasets/: mmfood100k_test.py
src/utils/: download_img.py  network.py
