[project]
name = "tfg"
version = "0.1.0"
description = "Macro Nutrient Prediction from Food Images"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "optuna",
    "pandas",
    "pillow",
    "requests",
    "scikit-learn",
    "tabulate",
    "torch",
    "torchvision",
    "tqdm",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helpers", "src/mmfood100k", "src/scripts"]
