[project]
name = "tfg"
version = "0.1.0"
description = "Macro Nutrient Prediction from Food Images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub",
    "optuna",
    "pandas",
    "pillow",
    "requests",
    "scikit-learn",
    "tabulate",
    "torch",
    "torchvision",
    "tqdm",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# packages = ["src/helpers", "src/scripts"]
packages = ["src"]

[project.scripts]
load-data='src.scripts.load_data:main'
# Add your scripts here
