[project]
name = "tfg"
version = "0.1.0"
description = "Macro Nutrient Prediction from Food Images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub",
    "optuna",
    "pandas",
    "pillow",
    "requests",
    "scikit-learn",
    "tabulate",
    "torch",
    "torchvision",
    "tqdm",
    "langchain",
    "langchain_community",
    "langchain_google_genai",
    "geocoder",
    "kaleido>=1.3.0",
    "plotly>=6.8.0",
    "jupyter>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
load-data='src.scripts.load_data:main'
model-shootout='src.studies.model_shootout:main'
sequential-fine-tuning='src.studies.sequential_fine_tuning:main'
platemate='src.scripts.platemate_agent:main'
plot-losses='src.scripts.plot_losses:main'
